# gptplus-

./: .gitignore  LICENSE  README.md  _syntax_check.py  config.example.toml  pyproject.toml  requirements.txt
scripts/: mitmdump.bat
src/: __init__.py  addon.py  ca_inject.py  config.py  gptplus_flow.py  mitm_runner.py  mumu_detect.py  revenuecat.py  token_capture.py  token_queue.py
src/gptplus_simulator_tools/: __init__.py
src/web/: app.py  automation.py  db.py  protection.py
src/web/static/: index.html  style.css
