[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gptplus-simulator"
version = "0.1.0"
description = "GPT Plus 模拟器订阅链路自动化工具（仅供学习）"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "anonymous"}]
dependencies = [
    "cryptography>=40.0.0",
    "mitmproxy>=10.0.0",
]

[project.scripts]
gptplus-flow = "gptplus_flow:main"

[tool.setuptools]
packages = ["src"]
